# FileManagementLibrary

./: CMakeLists.txt  Doxyfile  README.md  daemon_main.cpp
daemon/: CMakeLists.txt
daemon/include/: Daemon.h  DaemonException.h  FileHandles.h  Payload.h  Request.h  Result.h
daemon/src/: Daemon.cpp  FileHandles.cpp
docs/: _daemon_8cpp.html  _daemon_8cpp__incl.map  _daemon_8cpp__incl.md5  _daemon_8cpp_source.html  _daemon_8h.html  _daemon_8h__dep__incl.map  _daemon_8h__dep__incl.md5  _daemon_8h__incl.map  _daemon_8h__incl.md5  _daemon_8h_source.html  _daemon_exception_8h.html  _daemon_exception_8h__dep__incl.map  _daemon_exception_8h__dep__incl.md5  _daemon_exception_8h__incl.map  _daemon_exception_8h__incl.md5  _daemon_exception_8h_source.html  _file_handles_8cpp.html  _file_handles_8cpp__incl.map  _file_handles_8cpp__incl.md5  _file_handles_8cpp_source.html  _file_handles_8h.html  _file_handles_8h__dep__incl.map  _file_handles_8h__dep__incl.md5  _file_handles_8h__incl.map  _file_handles_8h__incl.md5  _file_handles_8h_source.html  _ipc_8cpp.html  _ipc_8cpp__incl.map  _ipc_8cpp__incl.md5  _ipc_8cpp_abfb35139bc75adc944b85393a647c929_icgraph.map  _ipc_8cpp_abfb35139bc75adc944b85393a647c929_icgraph.md5  _ipc_8cpp_af6bfe3d4834a14652246db692a7a912d_icgraph.map  _ipc_8cpp_af6bfe3d4834a14652246db692a7a912d_icgraph.md5  _ipc_8cpp_source.html  _ipc_8h.html  _ipc_8h__dep__incl.map  _ipc_8h__dep__incl.md5  _ipc_8h__incl.map  _ipc_8h__incl.md5  _ipc_8h_source.html  (+474 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+46 more)
tests/: CMakeLists.txt  multiple_processes_diff_files_test.cpp  multiple_processes_signal_test.cpp  multiple_processes_writers_test.cpp  tests.cpp
